# wled-sequencer

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix
nix/: devShells.nix  nixosModules.nix  overlays.nix  packages.nix
src/: cli.rs  ddp.rs  fseq_ffi.rs  lib.rs  main.rs  monitor.rs  playback.rs  test_data.rs
