[package]
name = "wled-sequencer"
version = "0.1.0"
edition = "2024"
license = "MIT Or Apache-2.0"
repository = "https://github.com/disassembler/wled-sequencer"
build = "build.rs"

[lib]
name = "wled_sequencer_lib"
path = "src/lib.rs"

[dependencies]
# Standard C types for FFI
libc = "0.2"
# Async runtime and basic utility
tokio = { version = "1", features = ["full", "fs", "net"] } 
# Dedicated DDP networking library
ddp-rs = "1.2"
# Utility for error handling
thiserror = "1.0"
# For creating the error type
anyhow = "1.0"
flate2 = { version = "1.1.7", features = ["zlib"] }
zstd = "0.13.3"
log = "0.4.29"
env_logger = "0.11.8"
clap = { version = "4.5", features = ["derive"] }

[build-dependencies]
# Required for finding the C header files and linking the library
bindgen = "0.72.1"
